# simple_cmake

./: CMakeLists.txt
inc/: test1.h  test2.h
src/: main.cpp  test1.cpp  test2.cpp
